--- a/package.json
+++ b/package.json
@@ -19,16 +19,22 @@
     "node": ">=12.0.0"
   },
   "dependencies": {
+    "@firebase/auth": "^0.14.2",
+    "@firebase/auth-types": "^0.10.0",
+    "@firebase/firestore": "^1.14.0",
     "@reach/router": "^1.2.1",
     "connect-ensure-login": "^0.1.1",
     "core-js": "^3.3.6",
     "express": "^4.16.4",
     "express-session": "^1.17.0",
+    "firebase": "^7.14.0",
+    "firebase-admin": "^8.10.0",
     "google-auth-library": "^5.5.1",
     "mongoose": "^5.7.7",
     "nodemon": "^1.19.4",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
+    "react-firebaseui": "^4.1.0",
     "react-google-login": "^5.0.7",
     "react-router-dom": "^4.3.1",
     "socket.io": "^2.3.0",
