--- a/package.json
+++ b/package.json
@@ -32,11 +32,13 @@
     "google-auth-library": "^5.5.1",
     "mongoose": "^5.7.7",
     "nodemon": "^1.19.4",
-    "react": "^16.7.0",
+    "query-string": "^6.12.1",
+    "react": "^16.8.0",
     "react-dom": "^16.7.0",
     "react-firebaseui": "^4.1.0",
     "react-google-login": "^5.0.7",
-    "react-router-dom": "^4.3.1",
+    "react-router-dom": "^5.1",
+    "react-stack-grid": "^0.7.1",
     "socket.io": "^2.3.0",
     "socket.io-client": "^2.3.0",
     "url-loader": "^1.1.2"
