--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "file-loader": "^3.0.1",
     "html-webpack-plugin": "^3.2.0",
     "react-hot-loader": "^4.6.3",
+    "react-video-thumbnail": "^0.1.3",
     "style-loader": "^0.23.1",
     "webpack": "^4.28.3",
     "webpack-cli": "^3.1.2",
