--- a/package.json
+++ b/package.json
@@ -41,7 +41,9 @@
     "react-stack-grid": "^0.7.1",
     "socket.io": "^2.3.0",
     "socket.io-client": "^2.3.0",
-    "url-loader": "^1.1.2"
+    "url-loader": "^1.1.2",
+    "kind-of": ">=6.0.3",
+    "minimist": ">=1.2.3"
   },
   "devDependencies": {
     "@babel/cli": "^7.4.4",
