--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
     "node": ">=12.0.0"
   },
   "dependencies": {
+    "@animated-burgers/burger-arrow": "^1.1.2",
     "@firebase/auth": "^0.14.2",
     "@firebase/auth-types": "^0.10.0",
     "@firebase/firestore": "^1.14.0",
     "@reach/router": "^1.2.1",
+    "classnames": "^2.2.6",
     "connect-ensure-login": "^0.1.1",
     "core-js": "^3.3.6",
     "express": "^4.16.4",
@@ -30,20 +32,22 @@
     "firebase": "^7.14.0",
     "firebase-admin": "^8.10.0",
     "google-auth-library": "^5.5.1",
+    "kind-of": ">=6.0.3",
+    "minimist": ">=1.2.3",
     "mongoose": "^5.7.7",
     "nodemon": "^1.19.4",
     "query-string": "^6.12.1",
     "react": "^16.8.0",
+    "react-burger-menu": "^2.6.14",
     "react-dom": "^16.7.0",
     "react-firebaseui": "^4.1.0",
     "react-google-login": "^5.0.7",
+    "react-headroom": "^3.0.0",
     "react-router-dom": "^5.1",
     "react-stack-grid": "^0.7.1",
     "socket.io": "^2.3.0",
     "socket.io-client": "^2.3.0",
-    "url-loader": "^1.1.2",
-    "kind-of": ">=6.0.3",
-    "minimist": ">=1.2.3"
+    "url-loader": "^1.1.2"
   },
   "devDependencies": {
     "@babel/cli": "^7.4.4",
