--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "",
   "main": "server/server.js",
   "scripts": {
+    "analyze": "source-map-explorer 'client/dist/bundle.js'",
+    "stats": "webpack-dev-server --profile --json > stats.json",
     "hotloader": "webpack-dev-server --config ./webpack.config.js --mode development --port 5000",
     "start": "nodemon",
     "build": "webpack"
@@ -27,6 +29,7 @@
     "classnames": "^2.2.6",
     "connect-ensure-login": "^0.1.1",
     "core-js": "^3.3.6",
+    "dotenv": "^8.2.0",
     "express": "^4.16.4",
     "express-session": "^1.17.0",
     "firebase": "^7.14.0",
@@ -38,6 +41,7 @@
     "nodemon": "^1.19.4",
     "query-string": "^6.12.1",
     "react": "^16.8.0",
+    "react-autosize-textarea": "^7.0.0",
     "react-burger-menu": "^2.6.14",
     "react-dom": "^16.7.0",
     "react-firebaseui": "^4.1.0",
@@ -47,6 +51,7 @@
     "react-stack-grid": "^0.7.1",
     "socket.io": "^2.3.0",
     "socket.io-client": "^2.3.0",
+    "source-map-explorer": "^2.4.2",
     "url-loader": "^1.1.2"
   },
   "devDependencies": {
@@ -65,6 +70,7 @@
     "react-video-thumbnail": "^0.1.3",
     "style-loader": "^0.23.1",
     "webpack": "^4.28.3",
+    "webpack-bundle-analyzer": "^3.8.0",
     "webpack-cli": "^3.1.2",
     "webpack-dev-server": "^3.1.14"
   }
