--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "analyze": "source-map-explorer 'client/dist/bundle.js'",
     "hotloader": "webpack-dev-server --config ./webpack.config.js --mode development --port 5000",
     "start": "nodemon",
-    "build": "webpack"
+    "build": "webpack --mode production"
   },
   "repository": {
     "type": "git",
