--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@firebase/auth-types": "^0.10.1",
     "@firebase/firestore": "^1.18.0",
     "@reach/router": "^1.3.4",
+    "babel-plugin-prismjs": "^2.0.1",
     "classnames": "^2.2.6",
     "connect-ensure-login": "^0.1.1",
     "core-js": "^3.8.1",
@@ -38,6 +39,7 @@
     "minimist": ">=1.2.3",
     "mongoose": "^5.11.8",
     "nodemon": "^1.19.4",
+    "prismjs": "1.20.0",
     "query-string": "^6.13.7",
     "react": "^16.14.0",
     "react-autosize-textarea": "^7.1.0",
@@ -46,8 +48,12 @@
     "react-firebaseui": "^4.1.0",
     "react-google-login": "^5.2.1",
     "react-headroom": "^3.1.0",
+    "react-markdown": "^5.0.3",
     "react-router-dom": "^5.2.0",
+    "react-simple-code-editor": "^0.11.0",
     "react-stack-grid": "^0.7.1",
+    "react-syntax-highlighter": "^15.4.3",
+    "remark-gfm": "^1.0.0",
     "socket.io": "^2.3.0",
     "socket.io-client": "^2.3.1",
     "source-map-explorer": "^2.5.1",
