--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "google-auth-library": "^5.10.1",
     "kind-of": ">=6.0.3",
     "minimist": ">=1.2.3",
+    "monaco-editor-webpack-plugin": "^2.1.0",
     "mongoose": "^5.11.8",
     "nodemon": "^1.19.4",
     "prismjs": "1.20.0",
@@ -49,6 +50,7 @@
     "react-google-login": "^5.2.1",
     "react-headroom": "^3.1.0",
     "react-markdown": "^5.0.3",
+    "react-monaco-editor": "^0.41.2",
     "react-router-dom": "^5.2.0",
     "react-simple-code-editor": "^0.11.0",
     "react-stack-grid": "^0.7.1",
