--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@firebase/auth": "^0.14.9",
     "@firebase/auth-types": "^0.10.1",
     "@firebase/firestore": "^1.18.0",
+    "@matejmazur/react-katex": "^3.1.3",
     "@reach/router": "^1.3.4",
     "babel-plugin-prismjs": "^2.0.1",
     "classnames": "^2.2.6",
@@ -35,6 +36,7 @@
     "firebase": "^7.24.0",
     "firebase-admin": "^8.13.0",
     "google-auth-library": "^5.10.1",
+    "katex": "^0.12.0",
     "kind-of": ">=6.0.3",
     "minimist": ">=1.2.3",
     "monaco-editor-webpack-plugin": "^2.1.0",
@@ -56,6 +58,8 @@
     "react-stack-grid": "^0.7.1",
     "react-syntax-highlighter": "^15.4.3",
     "remark-gfm": "^1.0.0",
+    "remark-images": "^2.0.0",
+    "remark-math": "^4.0.0",
     "socket.io": "^2.3.0",
     "socket.io-client": "^2.3.1",
     "source-map-explorer": "^2.5.1",
