--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "classnames": "^2.2.6",
     "connect-ensure-login": "^0.1.1",
     "core-js": "^3.8.1",
+    "dayjs": "^1.10.3",
     "dotenv": "^8.2.0",
     "express": "^4.16.4",
     "express-session": "^1.17.1",
@@ -54,9 +55,7 @@
     "react-markdown": "^5.0.3",
     "react-monaco-editor": "^0.41.2",
     "react-router-dom": "^5.2.0",
-    "react-simple-code-editor": "^0.11.0",
     "react-stack-grid": "^0.7.1",
-    "react-syntax-highlighter": "^15.4.3",
     "remark-gfm": "^1.0.0",
     "remark-images": "^2.0.0",
     "remark-math": "^4.0.0",
