--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@firebase/firestore": "^1.18.0",
     "@matejmazur/react-katex": "^3.1.3",
     "@reach/router": "^1.3.4",
+    "@sendgrid/mail": "^7.4.2",
     "babel-plugin-prismjs": "^2.0.1",
     "classnames": "^2.2.6",
     "connect-ensure-login": "^0.1.1",
