--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "react": "^16.14.0",
     "react-autosize-textarea": "^7.1.0",
     "react-burger-menu": "^2.9.2",
+    "react-canvas-draw": "^1.1.1",
     "react-dom": "^16.14.0",
     "react-firebaseui": "^4.1.0",
     "react-google-login": "^5.2.1",
